--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,14 @@
 <resources>
     <string name="app_name">Been There, Done That!</string>
     <string name="help">Help Screen</string>
-    <string name="menu">Main Menu Screen</string>
+
     <string name="splash">Splash Screen</string>
     <string name="settings">Settings Screen</string>
     <string name="game">Game Screen</string>
     <string name="scores">Scores Screen</string>
+    <string name="menu">MAIN MENU</string>
+    <string name="menu_item_settings">BazingSettings</string>
+    <string name="menu_item_play">BazingPlay</string>
+    <string name="menu_item_scores">BazingScores</string>
+    <string name="menu_item_help">BazingHelp</string>
 </resources>
